# casbin-client-permissions-rs

./: .env  Cargo.toml  README.md
casbin/: policy.csv
migrations/: 20220904144923_init.sql
src/: error.rs  main.rs  types.rs
src/handler/: mod.rs  policy.rs  session.rs
src/model/: account.rs  mod.rs  simple_user.rs
src/service/: account.rs  casbin.rs  mod.rs  token.rs
