[package]
name = "auth"
version = "0.1.1"
edition = "2021"

[dependencies]
actix-cors = "0.6.4"
actix-service = "2.0.2"
actix-web = "4.2.1"
casbin = { version = "2.0.9" }
chrono = { version = "0.4.19", features = ["serde"] }
crossbeam-utils = "0.8.7"
derive_more = "0.99.17"
dotenv = "0.15.0"
failure = "0.1.8"
fern = "0.6.1"
jsonwebtoken = "8.0.0-beta.6"
log = { version = "0.4.14", features = ["max_level_debug", "release_max_level_info"] }
paperclip = { version = "0.7.1", features = ["actix4", "swagger-ui", "chrono"] }
regex = "1.5.5"
rust-argon2 = "1.0.0"
serde = "1.0.130"
serde_derive = "1.0.130"
serde_json = "1.0.72"
sqlx = { version = "0.6.2", features = [ "runtime-actix-native-tls" , "postgres", "macros", "chrono", "offline" ] }
tokio = { version = "1.14.0", features = ["full"] }
uuid = { version = "1.2.1", features = ["serde", "v4"] }
validator = { version = "0.16.0", features = ["derive"] }
